Make the xblock studio view properly accept edits and add a shared key field

--- a/schoolyourself_lesson/templates/studio_view.html
+++ b/schoolyourself_lesson/templates/studio_view.html
@@ -1,9 +1,14 @@
 <p>
-  Module ID: <input type="text" name="module-id" value="${module_id}"/>
+  Module ID: <input type="text" class="module-id" value="${module_id}"/>
 </p>
 
 <p>
-  Player type: <input type="text" name="player-type" value="${player_type}"/>
+  Player type: <input type="text" class="player-type" value="${player_type}"/>
+</p>
+
+
+<p>
+  Shared key: <input type="text" class="shared-key" value="${shared_key}"/>
 </p>
 
 <p>
