Replace the "launch lesson" button with a module screenshot and play button

--- a/schoolyourself_lesson/templates/student_view.html
+++ b/schoolyourself_lesson/templates/student_view.html
@@ -1,1 +1,9 @@
-<button data-url="${iframe_url}">Launch lesson</button>
+<div class="schoolyourself-lesson-player" data-url="${iframe_url}">
+  <div class="schoolyourself-play-button">
+    <div class="schoolyourself-arrow-container">
+      <div class="schoolyourself-arrow"></div>
+    </div>
+  </div>
+  <img src="${screenshot_url}" />
+</div>
+
