--- a/schoolyourself/templates/review_student_view.html
+++ b/schoolyourself/templates/review_student_view.html
@@ -1,8 +1,16 @@
 <div class="schoolyourself-container">
   <div class="schoolyourself-lesson-player" data-url="${iframe_url}">
     <div class="schoolyourself-review-box">
+      <span class="centerfix"></span>
       <div class="schoolyourself-review-icon">
+        <div class="schoolyourself-caption">
+          ${module_title}
+        </div>
+
         <img src="${icon_url}" />
+        <div class="schoolyourself-caption-button">
+          Start review
+        </div>
       </div>
     </div>
   </div>
