--- a/schoolyourself/templates/studio_view.html
+++ b/schoolyourself/templates/studio_view.html
@@ -3,6 +3,10 @@
 </p>
 
 <p>
+  Module title: <input type="text" class="module-title" value="${module_title}"/>
+</p>
+
+<p>
   Shared key: <input type="text" class="shared-key" value="${shared_key}"/>
 </p>
 
