--- a/schoolyourself/templates/lesson_student_view.html
+++ b/schoolyourself/templates/lesson_student_view.html
@@ -1,12 +1,10 @@
 <div class="schoolyourself-container">
   <div class="schoolyourself-lesson-player" data-url="${iframe_url}">
-    <div class="schoolyourself-screenshot">
-      <div class="schoolyourself-screenshot-curtain"></div>
+    <div class="schoolyourself-lesson-box">
       <img src="${screenshot_url}" />
-    </div>
-    <div class="schoolyourself-play-button">
-      <div class="schoolyourself-arrow-container">
-        <div class="schoolyourself-arrow"></div>
+      <div class="schoolyourself-play-button-container">
+        <span class="centerfix"></span>
+        <div class="schoolyourself-play-button">Start lesson</div>
       </div>
     </div>
   </div>
