Redo the review & lesson UIs to look more like SY suggestions. Added a placeholder for the review progress bar

--- a/schoolyourself/templates/lesson_student_view.html
+++ b/schoolyourself/templates/lesson_student_view.html
@@ -1,10 +1,13 @@
-<div class="schoolyourself-container">
+<div class="schoolyourself-lesson">
   <div class="schoolyourself-lesson-player" data-url="${iframe_url}">
-    <div class="schoolyourself-lesson-box">
-      <img src="${screenshot_url}" />
-      <div class="schoolyourself-play-button-container">
-        <span class="centerfix"></span>
-        <div class="schoolyourself-play-button">Start lesson</div>
+    <div class="schoolyourself-lesson-block">
+      <div class="schoolyourself-lesson-screenshot">
+        <img src="${screenshot_url}" />
+      </div>
+
+      <div class="schoolyourself-lesson-text">
+        <div class="schoolyourself-lesson-title">${title}</div>
+        <div class="schoolyourself-lesson-description">${description}</div>
       </div>
     </div>
   </div>
