--- a/schoolyourself/templates/review_student_view.html
+++ b/schoolyourself/templates/review_student_view.html
@@ -1,17 +1,20 @@
-<div class="schoolyourself-container">
+<div class="schoolyourself-lesson">
   <div class="schoolyourself-lesson-player" data-url="${iframe_url}">
-    <div class="schoolyourself-review-box">
-      <span class="centerfix"></span>
-      <div class="schoolyourself-review-icon">
-        <div class="schoolyourself-caption">
-          ${module_title}
-        </div>
-
+    <div class="schoolyourself-lesson-block">
+      <div class="schoolyourself-review-screenshot">
         <img src="${icon_url}" />
-        <div class="schoolyourself-caption-button">
-          Start review
-        </div>
+      </div>
 
+      <div class="schoolyourself-lesson-text">
+        <div class="schoolyourself-lesson-title">Review: ${title}</div>
+        <div class="schoolyourself-lesson-description">Practice makes perfect!</div>
+        <div class="schoolyourself-review-mastery">
+          Almost there!
+          <div class="schoolyourself-review-mastery-bar">
+            <div class="schoolyourself-review-mastery-bar-filler">
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
