--- a/schoolyourself/templates/studio_view.html
+++ b/schoolyourself/templates/studio_view.html
@@ -7,6 +7,10 @@
 </p>
 
 <p>
+  Module description: <input type="text" class="module-description" value="${module_description}"/>
+</p>
+
+<p>
   Shared key: <input type="text" class="shared-key" value="${shared_key}"/>
 </p>
 
