--- a/schoolyourself/static/css/student_view.css
+++ b/schoolyourself/static/css/student_view.css
@@ -1,91 +1,114 @@
-.schoolyourself-container {
+.schoolyourself-lesson {
+  padding: 40px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  color: #6eb535;
+  background: #fafafa;
+  font-size: 0;
   text-align: center;
 }
 
-.schoolyourself-lesson-player {
-  position: relative;
+
+.schoolyourself-lesson-block {
   display: inline-block;
-  cursor: pointer;
   cursor: hand;
-  width: 512px;
-  border: 1px solid #737c95;
+  cursor: pointer;
+  vertical-align: top;
+  text-align: left;
+  position: relative;
 }
 
-.schoolyourself-play-button-container {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
+
+.schoolyourself-lesson-screenshot,
+.schoolyourself-review-screenshot {
+  margin-top: 10px;
+  margin-right: 20px;
+  box-shadow: 0px 0px 3px 1px #c1c1c1;
+  opacity: 0.8;
+  -webkit-transition: opacity 150ms linear;
+  -moz-transition: opacity 150ms linear;
+  -ms-transition: opacity 150ms linear;
+  -o-transition: opacity 150ms linear;
+  transition: opacity 150ms linear;
+  border: 2px solid #6eb535;
+  border-radius: 2px;
+  text-align: center;
+  background: #fff;
+
+  width: 256px;
+  height: 192px;
+  display: inline-block;
+  margin: 0;
 }
 
-.schoolyourself-play-button {
+.schoolyourself-review-screenshot {
+  width: 200px;
+  height: auto;
+  border: none;
+  background: transparent;
+  box-shadow: none;
+}
+
+.schoolyourself-lesson-screenshot > img,
+.schoolyourself-review-screenshot > img {
   display: inline-block;
   vertical-align: middle;
-  padding: 10px;
-  background: #6eb535;
-  border-radius: 5px;
-  border: 1px solid #a1d775;
-  font-weight: bold;
-  margin-top: 20px;
-  color: #fff;
-  font-size: 15px;
-  width: 150px;
-}
-
-
-.schoolyourself-review-box, .schoolyourself-lesson-box {
-  font-size: 0;
-  position: relative;
   width: 100%;
-  height: 384px;
-  text-align: center;
-
-  opacity: 0.8;
-  transition: opacity 100ms ease-in;
-  -webkit-transition: opacity 100ms ease-in;
-  -moz-transition: opacity 100ms ease-in;
-  -ms-transition: opacity 100ms ease-in;
-  -o-transition: opacity 100ms ease-in;
 }
 
-.schoolyourself-lesson-player:hover .schoolyourself-review-box,
-.schoolyourself-lesson-player:hover .schoolyourself-lesson-box {
+.schoolyourself-lesson-block:hover .schoolyourself-lesson-screenshot,
+.schoolyourself-lesson-block:hover .schoolyourself-review-screenshot {
   opacity: 1;
 }
 
-.schoolyourself-review-icon {
-  width: 200px;
+
+.schoolyourself-lesson-text {
+  text-align: left;
+  vertical-align: top;
+  padding-left: 40px;
   display: inline-block;
-  vertical-align: middle;
+}
+
+.schoolyourself-lesson-title {
+  text-transform: uppercase;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+.schoolyourself-lesson-block:hover .schoolyourself-lesson-title {
+  color: #6eb535;
+  text-decoration: underline;
+}
+
+.schoolyourself-lesson-description {
+  color: #737c95;
+  font-size: 21px;
+  margin-bottom: 5px;
+  height: 44px;
+  max-width: 320px;
+}
+
+.schoolyourself-review-mastery {
+  position: absolute;
+  bottom: 0;
+  color: #737c95;
+  font-size: 16px;
+  margin-bottom: 5px;
+  height: 44px;
+  max-width: 320px;
+}
+
+.schoolyourself-review-mastery-bar {
+  width: 320px;
+  background: #ddd;
+  height: 20px;
   position: relative;
 }
 
-.centerfix {
-  height: 100%;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.schoolyourself-review-icon > img {
-  vertical-align: middle;
-  width: 200px;
-}
-
-.schoolyourself-caption {
-  margin-bottom: 20px;
-  color: #737c95;
-  font-weight: bold;
-  font-size: 24px;
-}
-
-.schoolyourself-caption-button {
-  padding: 10px;
+.schoolyourself-review-mastery-bar-filler {
+  position: absolute;
   background: #6eb535;
-  border-radius: 5px;
-  border: 1px solid #a1d775;
-  font-weight: bold;
-  margin-top: 20px;
-  color: #fff;
-  font-size: 15px;
+  left: 0;
+  right: 50%;
+  top: 0;
+  bottom: 0;
 }
