--- a/schoolyourself/templates/review_student_view.html
+++ b/schoolyourself/templates/review_student_view.html
@@ -9,7 +9,7 @@
         <div class="schoolyourself-lesson-title">Review: ${title}</div>
         <div class="schoolyourself-lesson-description">Practice makes perfect!</div>
         <div class="schoolyourself-review-mastery">
-          Almost there!
+          <div class="schoolyourself-review-mastery-text"></div>
           <div class="schoolyourself-review-mastery-bar">
             <div class="schoolyourself-review-mastery-bar-filler">
             </div>
