Make reviews work properly if there are multiple instances on the page, and also return some useful messages from the grade handler

--- a/schoolyourself/templates/review_student_view.html
+++ b/schoolyourself/templates/review_student_view.html
@@ -1,5 +1,5 @@
 <div class="schoolyourself-lesson">
-  <div class="schoolyourself-lesson-player" data-url="${iframe_url}">
+  <div class="schoolyourself-lesson-player" data-url="${iframe_url}" data-mastery-url="${mastery_url}">
     <div class="schoolyourself-lesson-block">
       <div class="schoolyourself-review-screenshot">
         <img src="${icon_url}" />
