Allow editing the base URL in studio

--- a/schoolyourself/templates/studio_view.html
+++ b/schoolyourself/templates/studio_view.html
@@ -15,6 +15,10 @@
 </p>
 
 <p>
+  Base URL: <input type="text" class="base-url" value="${base_url}"/>
+</p>
+
+<p>
 <button class="save-button">Save</button>
 </p>
 
