change URL input to type "url"

--- a/schoolyourself/templates/studio_view.html
+++ b/schoolyourself/templates/studio_view.html
@@ -32,7 +32,7 @@
     <li class="field comp-setting-entry is-set">
       <div class="wrapper-comp-setting">
         <label class="label setting-label" for="base-url">Base URL</label>
-        <input type="text" class="base-url input setting-input" id="base-url" value="${base_url}"/>
+        <input type="url" class="base-url input setting-input" id="base-url" value="${base_url}"/>
       </div>
     </li>
   </ul>
