--- a/schoolyourself/templates/review_student_view.html
+++ b/schoolyourself/templates/review_student_view.html
@@ -2,11 +2,11 @@
   <div class="schoolyourself-lesson-player" data-url="${iframe_url}" data-mastery-url="${mastery_url}">
     <div class="schoolyourself-lesson-block">
       <div class="schoolyourself-review-screenshot">
-        <img src="${icon_url}" />
+        <img src="${icon_url}" alt="Review icon" />
       </div>
 
       <div class="schoolyourself-lesson-text">
-        <div class="schoolyourself-lesson-title">Review: ${title}</div>
+        <h1 class="schoolyourself-lesson-title">Review: ${title | h}</h1>
         <div class="schoolyourself-lesson-description">Practice makes perfect!</div>
         <div class="schoolyourself-review-mastery">
           <div class="schoolyourself-review-mastery-text"></div>
