Make the modal closable via keyboard and move focus to the modal upon opening

--- a/schoolyourself/templates/lesson_student_view.html
+++ b/schoolyourself/templates/lesson_student_view.html
@@ -6,7 +6,7 @@
       </div>
 
       <div class="schoolyourself-lesson-text">
-        <h1 class="schoolyourself-lesson-title">${title | h}</h1>
+        <h1 class="schoolyourself-lesson-title"><a href="#">${title | h}</a></h1>
         <div class="schoolyourself-lesson-description">${description | h}</div>
       </div>
     </div>
