--- a/schoolyourself/templates/review_student_view.html
+++ b/schoolyourself/templates/review_student_view.html
@@ -6,7 +6,7 @@
       </div>
 
       <div class="schoolyourself-lesson-text">
-        <h1 class="schoolyourself-lesson-title">Review: ${title | h}</h1>
+        <h1 class="schoolyourself-lesson-title"><a href="#">Review: ${title | h}</a></h1>
         <div class="schoolyourself-lesson-description">Practice makes perfect!</div>
         <div class="schoolyourself-review-mastery">
           <div class="schoolyourself-review-mastery-text"></div>
