--- a/schoolyourself/static/css/student_view.css
+++ b/schoolyourself/static/css/student_view.css
@@ -69,15 +69,21 @@
   display: inline-block;
 }
 
-.schoolyourself-lesson-title {
+.schoolyourself-lesson-title,
+.schoolyourself-lesson-title a,
+.schoolyourself-lesson-title a:visited {
   text-transform: uppercase;
   font-size: 24px;
   margin-bottom: 10px;
+  font-weight: 300;
+  color: #6eb535;
+  text-decoration: none;
 }
 .schoolyourself-lesson-block:hover .schoolyourself-lesson-title {
   color: #6eb535;
   text-decoration: underline;
 }
+
 
 .schoolyourself-lesson-description {
   color: #737c95;
