fix margin of the lesson titles which were converted to h1

--- a/schoolyourself/static/css/student_view.css
+++ b/schoolyourself/static/css/student_view.css
@@ -78,6 +78,7 @@
   font-weight: 300;
   color: #6eb535;
   text-decoration: none;
+  margin-bottom: 0;
 }
 .schoolyourself-lesson-block:hover .schoolyourself-lesson-title {
   color: #6eb535;
