--- a/schoolyourself/static/css/student_view.css
+++ b/schoolyourself/static/css/student_view.css
@@ -78,7 +78,7 @@
   font-weight: 300;
   color: #6eb535;
   text-decoration: none;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .schoolyourself-lesson-block:hover .schoolyourself-lesson-title {
   color: #6eb535;
