--- a/schoolyourself/static/css/student_view.css
+++ b/schoolyourself/static/css/student_view.css
@@ -35,6 +35,7 @@
   text-align: center;
   background: #fff;
 
+  float: left;
   width: 256px;
   height: 192px;
   display: inline-block;
@@ -66,7 +67,7 @@
   text-align: left;
   vertical-align: top;
   padding-left: 40px;
-  display: inline-block;
+  overflow: hidden;
 }
 
 .schoolyourself-lesson-title,
@@ -74,11 +75,11 @@
 .schoolyourself-lesson-title a:visited {
   text-transform: uppercase;
   font-size: 24px;
-  margin-bottom: 10px;
   font-weight: 300;
   color: #6eb535;
   text-decoration: none;
   margin-bottom: 0 !important;
+  margin-top: 0;
 }
 .schoolyourself-lesson-block:hover .schoolyourself-lesson-title {
   color: #6eb535;
@@ -90,18 +91,20 @@
   color: #737c95;
   font-size: 21px;
   margin-bottom: 5px;
-  height: 44px;
   max-width: 320px;
 }
 
 .schoolyourself-review-mastery {
-  position: absolute;
-  bottom: 0;
+  margin-top: 20px;
+  height: 44px;
   color: #737c95;
   font-size: 16px;
   margin-bottom: 5px;
-  height: 44px;
   max-width: 320px;
+}
+
+.schoolyourself-review-mastery-text {
+  height: 24px;
 }
 
 .schoolyourself-review-mastery-bar {
